Fix so that button icon spacing remains for buttons.

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -245,7 +245,7 @@ ul.dropdown-menu > li > * {
 }
 
 // Give space for each icon
-ul.dropdown-menu > li i {
+ul.dropdown-menu > li > * > i:first-child {
   margin-right: 0.75rem;
 }
 
